# codegen-sdk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile-runner  README.md  Untitled.ipynb  conftest.py  hatch.toml  integration.py  mypy.ini  package.json  pyproject.toml  renovate.json5  ruff.toml  test.ipynb  tinygen.py
.circleci/: ats.sh  config.yml
.codegen/: .gitignore  config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  codecov.yml  disallowed-words.txt  pull_request_template.md
.github/workflows/: auto-release.yml  cache-warm-up.yml  changelog-generation.yml  pre-commit.yml  release-stubs.yml  release.yml  unit-tests.yml
architecture/: architecture.md
architecture/2. parsing/: B. AST Construction.md
architecture/3. imports-exports/: A. Imports.md  B. Exports.md  C. TSConfig.md
architecture/4. type-analysis/: A. Type Analysis.md  B. Tree Walking.md  C. Name Resolution.md  D. Chained Attributes.md  E. Function Calls.md  F. Generics.md  G. Subscript Expression.md  H. Graph Edges.md
architecture/5. performing-edits/: A. Edit Operations.md  B. Transaction Manager.md
codegen-examples/: CONTRIBUTING.md  README.md  STRUCTURE.md  pyproject.toml
codegen-examples/examples/linear_webhooks/: .env.template  pyproject.toml  webhooks.py
codegen-git/: pyproject.toml
docs/: README.md  conftest.py  mint.json
scripts/: disallowed-words-check.sh
sdk-core/: Cargo.toml
sdk-core/codegen-sdk-cst/: Cargo.toml  build.rs  snazzy_items.ts
sdk-core/codegen-sdk-cst/src/: lib.rs
tests/: README.md  __init__.py  conftest.py
(+1587 files in other folders)
